[package]
name = "ftx"
version = "0.1.0"
authors = ["Fabian Bösiger <boesiger.fabian@outlook.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["exchange", "trading", "crypto", "market"]
categories = ["api-bindings"]
description = "Unofficial API Binding for the FTX Exchange."
repository = "https://github.com/fabianboesiger/ftx"
readme = "README.md"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac-sha256 = "0.1"
dotenv = "0.15"
log = "0.4"
hex = "0.4"
rust_decimal = "1.11"
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = { verion = "0.14", features = ["native-tls"], optional = true }
futures-util = { verion = "0.3", optional = true }
tokio = { version = "1.5", optional = true }

[dev-dependencies]
tokio = { version = "1.5", features = ["full"] }
env_logger = "0.8"

[features]
default = ["ws", "stateful"]
ws = ["tokio-tungstenite", "tokio", "futures-util"]
stateful = ["ws"]