[package]
name = "ftx"
version = "0.2.0"
authors = ["Fabian Bösiger <boesiger.fabian@outlook.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["exchange", "trading", "crypto", "market"]
categories = ["api-bindings"]
description = "Unofficial API Binding for the FTX Exchange."
repository = "https://github.com/fabianboesiger/ftx"
readme = "README.md"

[dependencies]
reqwest = { version = "^0.11.3", features = ["json"] }
serde = { version = "^1.0.125", features = ["derive"] }
serde_json = "^1.0.64"
serde_with = { version = "^1.9.1", features = ["chrono"] }
hmac-sha256 = "^0.1.7"
crc32fast = "^1.2.1"
dotenv = "^0.15.0"
log = "^0.4.14"
hex = "^0.4.3"
rust_decimal = "^1.13.0"
rust_decimal_macros = "^1.14.1"
chrono = { version = "^0.4.19", features = ["serde"] }
tokio-tungstenite = { version = "^0.14.0", features = ["native-tls"], optional = true }
futures-util = { version = "^0.3.14", optional = true }
tokio = { version = "^1.5.0", optional = true }

[dev-dependencies]
tokio = { version = "^1.5.0", features = ["full"] }
env_logger = "^0.8.3"

[features]
default = ["ws"]
ws = ["tokio-tungstenite", "tokio", "futures-util"]
